fix: authentication user, feat: add landing page, style: improve some UI